tests/errors/array-size-missing.ja
procedure main()
    int x[]
    skip
